--- a/recsys/recsys-1.ipynb
+++ b/recsys/recsys-1.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "2204f30a-52f7-4c31-a44a-ff3e51363c29",
    "metadata": {},
    "outputs": [
@@ -143,6 +143,8 @@
       "\n",
       "[5 rows x 5 columns]\n",
       "Total rows: 12891680\n",
+      "Try to open file: 2c585af0-3942-47f6-90d4-54f25c892682.lance\n",
+      "\n",
       "All done\n",
       "\n",
       "See you, space cowboy\n",
@@ -179,7 +181,6 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import Counter\n",
     "import powerlaw"
    ]
   },
@@ -193,7 +194,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "id": "4ff3e948",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.81 s, sys: 604 ms, total: 3.42 s\n",
+      "Wall time: 2.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time df = pd.read_parquet('cleaned_spotify_dataset.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d4ddd9da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "37978598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 13.8 s, sys: 652 ms, total: 14.4 s\n",
+      "Wall time: 14.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time df = lance.dataset('cleaned_spotify_dataset.lance').to_table().to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "c2fb0fdd-97bb-45e5-a37a-1655d66f6123",
    "metadata": {},
    "outputs": [
@@ -266,13 +315,12 @@
        "2                                   7 Years Too Late  HARD ROCK 2010  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_parquet('cleaned_spotify_dataset.parquet')\n",
     "df.head(3)"
    ]
   },
@@ -286,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "bd713360-212d-4a86-a806-306f745bc57b",
    "metadata": {},
    "outputs": [
@@ -296,7 +344,7 @@
        "12891680"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,29 +362,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95e115cd",
+   "metadata": {},
+   "source": [
+    "Top 20 artists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6069975a-9223-4998-a367-2665ad938c8d",
+   "execution_count": 22,
+   "id": "4da51ccd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Top artists: [('Daft Punk', 36086), ('Coldplay', 35485), (None, 33568), ('Radiohead', 31429), ('The Rolling Stones', 30832), ('Kanye West', 29111), ('JAY Z', 28928), ('Eminem', 28894), ('Queen', 28079), ('David Bowie', 27802), ('Michael Jackson', 26336), ('Muse', 24159), ('U2', 23455), ('Rihanna', 23315), ('Arctic Monkeys', 23288), ('Pearl Jam', 23085), ('Foo Fighters', 21999), ('David Guetta', 21798), ('Bruce Springsteen', 21764), ('Nirvana', 21184)]\n",
-      "\n",
-      "\n",
-      "Top songs: [('Intro', 6676), ('Home', 5600), ('Closer', 3549), ('Runaway', 3350), ('Hold On', 3224), ('Radioactive', 3189), ('Forever', 3055), ('Stay', 2993), ('Alive', 2936), ('Wake Me Up', 2794), ('Heaven', 2793), ('Trouble', 2789), ('Kids', 2714), ('Breathe', 2696), ('Crazy', 2692), ('Dreams', 2691), ('Angel', 2683), ('Happy', 2660), ('You', 2645), ('One', 2622)]\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Daft Punk             36086\n",
+       "Coldplay              35485\n",
+       "Radiohead             31429\n",
+       "The Rolling Stones    30832\n",
+       "Kanye West            29111\n",
+       "JAY Z                 28928\n",
+       "Eminem                28894\n",
+       "Queen                 28079\n",
+       "David Bowie           27802\n",
+       "Michael Jackson       26336\n",
+       "Muse                  24159\n",
+       "U2                    23455\n",
+       "Rihanna               23315\n",
+       "Arctic Monkeys        23288\n",
+       "Pearl Jam             23085\n",
+       "Foo Fighters          21999\n",
+       "David Guetta          21798\n",
+       "Bruce Springsteen     21764\n",
+       "Nirvana               21184\n",
+       "Bob Dylan             21044\n",
+       "Name: artist, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "artist_counter = Counter(list(df['artist']))\n",
-    "song_counter = Counter(list(df['track']))\n",
-    "print(\"\\nTop artists: {}\\n\".format(artist_counter.most_common(20)))\n",
-    "print(\"\\nTop songs: {}\\n\".format(song_counter.most_common(20)))"
+    "df.artist.value_counts().head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b43e43",
+   "metadata": {},
+   "source": [
+    "Top 20 songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c8986978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intro          6676\n",
+       "Home           5600\n",
+       "Closer         3549\n",
+       "Runaway        3350\n",
+       "Hold On        3224\n",
+       "Radioactive    3189\n",
+       "Forever        3055\n",
+       "Stay           2993\n",
+       "Alive          2936\n",
+       "Wake Me Up     2794\n",
+       "Heaven         2793\n",
+       "Trouble        2789\n",
+       "Kids           2714\n",
+       "Breathe        2696\n",
+       "Crazy          2692\n",
+       "Dreams         2691\n",
+       "Angel          2683\n",
+       "Happy          2660\n",
+       "You            2645\n",
+       "One            2622\n",
+       "Name: track, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.track.value_counts().head(20)"
    ]
   },
   {
@@ -349,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "aec7cc63-c057-4fa6-b4dc-580c2eb77548",
    "metadata": {},
    "outputs": [],
@@ -365,13 +485,13 @@
     "    import matplotlib.pyplot as plt\n",
     "    plt.ioff()\n",
     "    fig, axs = plt.subplots(1, 2, tight_layout=True, figsize=(8,4))\n",
-    "    axs[0].hist(artist_counter.values(), bins=n_bins, color='#2E3454')\n",
+    "    axs[0].hist(artists.values, bins=n_bins, color='#2E3454')\n",
     "    axs[0].set_title('Artists', fontsize=16)\n",
     "    axs[0].set_yscale('log')\n",
     "    axs[0].ticklabel_format(axis=\"x\", style=\"sci\", scilimits=(0,0))\n",
     "    axs[0].set_xlabel('# of artists')\n",
     "    axs[0].set_ylabel('# of times artist is in a playlist')\n",
-    "    axs[1].hist(song_counter.values(), bins=n_bins, color='#2E3454')\n",
+    "    axs[1].hist(tracks.values, bins=n_bins, color='#2E3454')\n",
     "    axs[1].set_title('Songs', fontsize=16)\n",
     "    axs[1].set_yscale('log')\n",
     "    axs[1].ticklabel_format(axis=\"x\", style=\"sci\", scilimits=(0,0))\n",
@@ -386,12 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "f54b0b53-0741-438c-aa48-3471ac7cb9de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_distribution(artist_counter, song_counter);"
+    "plot_distribution(df.groupby('artist')['playlist'].count(), \n",
+    "                  df.groupby('track')['playlist'].count());"
    ]
   },
   {
@@ -412,10 +533,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "c9991f31-db4d-460e-94a9-3c6d36ae7416",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Values less than or equal to 0 in data. Throwing out 0 or negative values\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -426,31 +556,21 @@
     }
    ],
    "source": [
-    "data = list(artist_counter.values())\n",
+    "data = (df.groupby('artist')['playlist'].count()\n",
+    "        .values.tolist())\n",
     "fit = powerlaw.Fit(data, discrete=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "cfd1c69c-8e40-406a-8f83-179ce3960a58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating best minimal value for power law fit\n",
-      "xmin progress: 99%\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1,1,figsize=(4,4))\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
-    "data = list(artist_counter.values())\n",
-    "fit = powerlaw.Fit(data, discrete=True)\n",
     "figCCDF = fit.plot_pdf(color='#2E3454', linewidth=2, ax=ax)\n",
     "fit.power_law.plot_pdf(color='#2E3454', linestyle='--', ax=figCCDF)\n",
     "fig.savefig('./powerlaw.png');"
@@ -473,13 +593,21 @@
     "You saw which artists and songs are most popular and observed how the distribution of how artists are represented in playlists follows a power law. \n",
     "In the next episode, we will see how to leverage DuckDB to query the dataset efficiently. See you there!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b52214ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mf-tutorial-recsys",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mf-tutorial-recsys"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
